--- a/web_back/login.html
+++ b/web_back/login.html
@@ -65,7 +65,7 @@
        function(res){
            console.log(res);
            if (res.code==200) {
-               alert('登录成功')
+              //  alert('登录成功')
               location.href='./index.html'
                
            }else{
