--- a/web_back/index.html
+++ b/web_back/index.html
@@ -103,25 +103,12 @@
         }
 
     </script>
-
-<script>
-    var tui={
-        logout:function () {
-            $.post(
-                'http://localhost:8000/admin/logout',
-                function(res){
-                    console.log(res);
-                    if (res.code==200) {
-                        window.location.href='./login.html'
-                    }
-                }
-            )
-        }
-    }
-</script>
+    
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/uti/user.js"></script>
     <script>
         $('#tuichu').click(function(){
-            tui.logout()
+            user1.logout()
         })
     </script>
 </body>
